--- a/GUI/mainwindow.ui
+++ b/GUI/mainwindow.ui
@@ -44,7 +44,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Send</string>
+     <string>发送</string>
     </property>
    </widget>
    <widget class="QPushButton" name="text_send">
@@ -93,22 +93,6 @@
     </property>
     <property name="text">
      <string>video</string>
-    </property>
-    <property name="checkable">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_5">
-    <property name="geometry">
-     <rect>
-      <x>540</x>
-      <y>450</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
@@ -174,6 +158,22 @@
     </property>
     <property name="text">
      <string>添加</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="quitvideo">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>450</y>
+      <width>89</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>退出视频</string>
     </property>
    </widget>
   </widget>
